--- a/src/app/gestion-excel/duplicates/duplicates-excel/duplicates-excel.component.css
+++ b/src/app/gestion-excel/duplicates/duplicates-excel/duplicates-excel.component.css
@@ -1,18 +1,50 @@
-/* Quand l'accordion est en train de s'ouvrir ou de se fermer */
 .collapsing {
     transition: height 0.15s ease, opacity 0.15s ease !important;
     opacity: 0.5;
-    /* optionnel */
 }
 
-/* Quand il est ouvert */
 .collapse.show {
     transition: height 0.15s ease, opacity 0.15s ease !important;
     opacity: 1;
 }
 
-/* Quand il est fermé */
 .collapse {
     transition: height 0.15s ease, opacity 0.15s ease !important;
     opacity: 0;
+}
+
+.table-wrapper {
+    max-height: 700px;
+    overflow-y: auto;
+    border-radius: 0.5rem;
+}
+
+.table-scroll:hover {
+    overflow-y: auto;
+}
+
+.table-scroll {
+    max-height: 600px;
+    overflow-y: auto;
+    scrollbar-gutter: stable;
+}
+
+/* Scrollbar custom */
+.table-scroll::-webkit-scrollbar {
+    width: 8px;
+}
+
+.table-scroll::-webkit-scrollbar-thumb {
+    background-color: transparent;
+}
+
+.table-scroll:hover::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.sticky-header {
+    position: sticky;
+    top: 0;
+    z-index: 5;
+    background: #f8f9fa;
 }
